gcc/testsuite/g++.dg/cpp0x/lambda/lambda-58566.C
// PR c++/58566
// { dg-do compile { target c++11 } }

struct A
{
  int foo()
  {
    [this]{ return foo; }; // { dg-error "invalid use of member function|cannot convert" }
  }
};
